--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,19 @@
-#
-# Use this configuration file to control what RobotPy packages are installed
-# on your RoboRIO
-#
+[build-system]
+requires = ["robotpy-build", "wpilib", "phoenix6"]
 
 [tool.robotpy]
+robotpy_version = "2024.3.2.2"
 
-# Version of robotpy this project depends on
-robotpy_version = "2025.3.2.2"
-
-# Which extra RobotPy components should be installed
-# -> equivalent to `pip install robotpy[extra1, ...]
-robotpy_extras = [
-    # "all",
-    # "apriltag",
-    # "commands2",
-    # "cscore",
-    # "navx",
-    # "pathplannerlib",
-    # "phoenix5",
-    # "phoenix6",
-    # "rev",
-    # "romi",
-    # "sim",
-    # "xrp",
+[tool.robotpy.wpilib.simulation]
+# Enable HAL simulation
+extensions = [
+    "phoenix6.sim",
+    "navx.sim"
 ]
 
-# Other pip packages to install
-requires = []
+[[tool.robotpy.pip_requirements]]
+packages = [
+    "phoenix6",
+    "wpimath",
+    "ntcore",
+]
